force-app/main/default/objects/Contact/fields/Account_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Title__c</fullName>
    <description
  >Bank account title for the employee. Access is restricted to payroll managers.</description>
    <label>Account Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>