force-app/main/default/objects/Contact/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <description
  >Father or guardian name when required for the employee payslip.</description>
    <label>Father Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>