force-app/main/default/objects/Contact/fields/Government_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Number__c</fullName>
    <description
  >Government-issued employee identifier such as CNIC. Treat as sensitive and render only a masked snapshot on payslips.</description>
    <label>Government ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>