force-app/main/default/objects/Contact/fields/IBAN_Code__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Code__c</fullName>
    <description
  >Employee IBAN. Treat as sensitive payroll data and display only a masked value outside payroll administration.</description>
    <label>IBAN Code</label>
    <length>34</length>
    <type>Text</type>
</CustomField>